integrate lastest modifs of GB
