# out/openapi_server/models/fci_capabilities.py
@@ -1,0 +1,68 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.fci_genericbase import FCIGenericbase
+from openapi_server import util
+
+from openapi_server.models.fci_genericbase import FCIGenericbase  # noqa: E501
+
+class FCICapabilities(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, capabilities=None):  # noqa: E501
+        """FCICapabilities - a model defined in OpenAPI
+
+        :param capabilities: The capabilities of this FCICapabilities.  # noqa: E501
+        :type capabilities: List[FCIGenericbase]
+        """
+        self.openapi_types = {
+            'capabilities': List[FCIGenericbase]
+        }
+
+        self.attribute_map = {
+            'capabilities': 'capabilities'
+        }
+
+        self._capabilities = capabilities
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'FCICapabilities':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The FCICapabilities of this FCICapabilities.  # noqa: E501
+        :rtype: FCICapabilities
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def capabilities(self):
+        """Gets the capabilities of this FCICapabilities.
+
+
+        :return: The capabilities of this FCICapabilities.
+        :rtype: List[FCIGenericbase]
+        """
+        return self._capabilities
+
+    @capabilities.setter
+    def capabilities(self, capabilities):
+        """Sets the capabilities of this FCICapabilities.
+
+
+        :param capabilities: The capabilities of this FCICapabilities.
+        :type capabilities: List[FCIGenericbase]
+        """
+        if capabilities is None:
+            raise ValueError("Invalid value for `capabilities`, must not be `None`")  # noqa: E501
+
+        self._capabilities = capabilities
